improvements Generator Level